--- a/TODO
+++ b/TODO
@@ -3,12 +3,17 @@ PNG Decoder:
 
 DONE - Parsing all chunks
 DONE - Identifing critical chunks
-    - IHDR (Image Header)
+    DONE - IHDR (Image Header)
+    DONE - PLTE (Color Palette)
+    DONE - IDAT (Image Data)
+    DONE - IEND (Image Trailer)
+
+- Parsing critical chunk data
+    DONE - IHDR (Image Header)
     - PLTE (Color Palette)
     - IDAT (Image Data)
     - IEND (Image Trailer)
 
-- Parsing critical chunk data
 
 DONE - Check CRC for each chunk while parsing
 - Parse CRC before parsing the data (how)
